# memo

./: .dockerignore  .gitignore  README.md  cog.yaml  finetune.py  inference.py  predict.py  pyproject.toml
configs/: finetune.yaml  inference.yaml
memo/datasets/: video_dataset.py
memo/models/: attention.py  attention_processor.py  audio_proj.py  emotion_classifier.py  image_proj.py  motion_module.py  normalization.py  resnet.py  transformer_2d.py  transformer_3d.py  unet_2d_blocks.py  unet_2d_condition.py  unet_3d.py  unet_3d_blocks.py  wav2vec.py
memo/pipelines/: video_pipeline.py
memo/utils/: audio_utils.py  vision_utils.py
scripts/: calculate_durations.py  prepare_data.py
